apache lucene action